PTRI - Connexion d'un profil utilisateur (Acl et Auth)

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -38,7 +38,7 @@
 		<?php
 			$date = new Zend_Date();
 			echo $date->toString('dd MMMM yyyy') . '<br/>';
-			echo $this->LoggedUser();
+			echo $this->LoggedProfil();
 		?>
  
 	</div>		
