--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,46 +1,93 @@
+
 <?php echo $this->doctype() ?> <!-- définit par le bootstrap -->
+
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <?php
-    $this->JQuery()->addStyleSheet($this->baseUrl() . '/js/jquery/themes/smoothness/jquery-ui-1.8.23.custom.css');
-    //indique le fichier de script javascript à utliser avec jQuery UI
-    $this->JQuery()->setUiLocalPath($this->baseUrl() . '/js/jquery/ui/jquery-ui-1.8.23.custom.js');
-    echo $this->jQuery();
-  ?>
-  <title>Zend User Manager</title>
-  <?php echo $this->headLink()->appendStylesheet($this->baseUrl() . '/css/style.css') ?>
-</head>
- 
+	<head>
+		  <meta http-equiv="Content-Type" content="text/html; charset=ISO8859-1" />
+		  <?php
+			    $this->JQuery()->addStyleSheet($this->baseUrl() . '/js/jquery/themes/smoothness/jquery-ui-1.8.23.custom.css');
+			    //indique le fichier de script javascript à utliser avec jQuery UI
+			    $this->JQuery()->setUiLocalPath($this->baseUrl() . '/js/jquery/ui/jquery-ui-1.8.23.custom.js');
+			    echo $this->jQuery();
+		  ?>
+		  <?php 
+			  	echo $this->headLink()->appendStylesheet($this->baseUrl() . '/css/page2.css'); 
+			  	echo $this->headTitle();
+		  ?>
+	</head>
+
 <body>
-    <div id="top">
-        Zend User Manager
-    </div>
-    <div>
-        <div id="left">
-            Menu<br />
-            <?php //attention à la balise "<?=" pour l'url ?>
-   <a href="<?php echo $this->url(array('controller' => 'users', 'action' => 'create'), 'default', true) ?>">Creation</a>
-        </div>
-        <div>
-            <div id="content" class="right_content">
-                <!-- affiche le contenu dynamique de la page -->
-                <?php echo $this->layout()->content ?>
-            </div>
-        </div>
-    </div>
-    
-    <div id="bottom">
-            aurevec.be
-    </div>
-	<div id="right">
-		<h1>Authentication</h1> <br/>
-		<?php
-			$date = new Zend_Date();
-			echo $date->toString('dd MMMM yyyy') . '<br/>';
-			echo $this->LoggedProfil();
-		?>
- 
-	</div>		
+		<div id="bloc_page">
+		
+		
+            <header>
+                <div id="titre_principal">
+                    
+                    <h1> <Strong> Application de gestion des cong&eacute;s </Strong></h1>
+                    
+				</div>
+			    <nav>
+                    <ul id="menuDeroulant">
+                        <li><a href="#">Gestion des demandes</a>
+						<ul  class="sousMenu">
+							<li><a href="<?php echo $this->url(array('controller' => 'demande', 'action' => 'create'), 'default', true) ?>">Créer</a></li>
+							<li><a href="<?php echo $this->url(array('controller' => 'demande', 'action' => 'rederigerversindex'), 'default', true) ?>">Valider / Refuser</a></li>
+						</ul>
+						</li>
+                        
+                        <li><a href="#">Proposition</a>
+						<ul  class="sousMenu">
+							<li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'create'), 'default', true) ?>" >Créer</a></li>
+							<li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'affichercsm'), 'default', true) ?>">Afficher / Modifier</a></li>
+							<li><a href="<?php echo $this->url(array('controller' => 'proposition', 'action' => 'afficheradmin'), 'default', true) ?>">Valider / Refuser</a></li>
+						</ul>
+						</li>
+                        
+						<li><a href="#">Conge</a>
+						<ul  class="sousMenu">
+							<li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'create'), 'default', true) ?>">Créer</a></li>
+							<li><a href="<?php echo $this->url(array('controller' => 'conge', 'action' => 'rederigerversindex'), 'default', true) ?>">Valider / Refuser</a></li>
+						</ul>
+						</li>
+						
+						<li><a href="#">Personne</a>
+						<ul  class="sousMenu">
+							<li><a href="<?php echo $this->url(array('controller' => 'personne', 'action' => 'create'), 'default', true) ?>">Ajouter Personne</a></li>
+							<li><a href="<?php echo $this->url(array('controller' => 'personne', 'action' => 'index'), 'default', true) ?>">Afficher Personnels</a></li>
+							<li><a href="<?php echo $this->url(array('controller' => 'solde', 'action' => 'create'), 'default', true) ?>">Initialiser les soldes</a></li>
+							<li><a href="<?php echo $this->url(array('controller' => 'ferie', 'action' => 'create'), 'default', true) ?>">Declarer jours feries CSM</a></li>
+							<li><a href="<?php echo $this->url(array('controller' => 'ferie', 'action' => 'index'), 'default', true) ?>">Afficher jours feries CSM</a></li>
+						</ul>
+						</li>
+						
+						<li><a href="#">Calendrier</a>
+						<ul  class="sousMenu">
+							<li><a href="<?php echo $this->url(array('controller' => 'calendrier', 'action' => 'calendriermensuel'), 'default', true) ?>">Calendrier Mensuel</a></li>
+							<li><a href="#">Calendrier Annuel</a></li>
+						</ul>
+						</li>
+                  
+					</ul>
+                </nav>
+			
+	
+				
+			
+			</header>
+		
+			<p><?php echo $this->LoggedProfil();?></p>
+	
+		
+
+
+		<div id="content">
+		
+
+		  <?php echo  $this->layout()->content; ?>
+		
+		</div>	
+
 </body>
-</html>
+           
+           
+
