MTA : Présentation  des vues « afficher » et « valider »       Ajout du fichier /public/css/Table_Afficher_Valider.css

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -12,7 +12,9 @@
 		  ?>
 		  <?php 
 			  	echo $this->headLink()->appendStylesheet($this->baseUrl() . '/css/page2.css'); 
+			  	echo $this->headLink()->appendStylesheet($this->baseUrl() . '/css/Table_Afficher_Valider.css'); 
 			  	echo $this->headTitle();
+			  	
 		  ?>
 	</head>
 
