--- a/application/views/scripts/proposition/afficheradmin.phtml
+++ b/application/views/scripts/proposition/afficheradmin.phtml
@@ -1,5 +1,7 @@
-<div>
+<div >
+ <div class = "Table_Afficher_Valider">  <!--  MTA / Mohamed khalil Takafi  -->
     <table border="1">
+    
         <tr>
             
             <th>Nom Prenom</th>
@@ -10,7 +12,6 @@
             <th>Accepter</th>
             <th>Refuser</th>
             
-
         </tr>
         <?php
             //$this->usersArray est une variable qui peut être garnie par le controller
@@ -38,7 +39,11 @@
 
         </tr>
         <?php endforeach; ?>
+       
     </table>
+
+</div>
+    </br>    <!--  MTA / Mohamed khalil Takafi  -->
     <?php
     //nous affichons, à la suite du tableau (après la balise </table>), notre template qui permettra de gérer la pagination
     //la méthode pginationControl() prend, ici, 3 arguments:
