--- a/application/views/scripts/proposition/affichercsm.phtml
+++ b/application/views/scripts/proposition/affichercsm.phtml
@@ -1,5 +1,6 @@
 <div>
-    <table border="1">
+<div  class = "Table_Afficher_Valider">  <!--  MTA / Mohamed khalil Takafi  -->
+    <table border="1" >
         <tr>
            
             <th>Nom Prenom</th>
@@ -11,8 +12,6 @@
             <th>Etat</th>
             <th>Edit</th>
             <th>Delete</th>
-
-            
 
         </tr>
         <?php
@@ -50,6 +49,8 @@
         
         <?php endforeach; ?>
     </table>
+    </div>
+    </br> <!--  MTA / Mohamed khalil Takafi  -->
     <?php
     //nous affichons, à la suite du tableau (après la balise </table>), notre template qui permettra de gérer la pagination
     //la méthode pginationControl() prend, ici, 3 arguments:
