MBA- ajt du champ cs dans la table avec les traitements nécessaires
cs est déduit de l'entité à laquelle appartient une personne.

--- a/application/views/scripts/personne/create.phtml
+++ b/application/views/scripts/personne/create.phtml
@@ -23,7 +23,7 @@
 						</br>
 						<li><strong>Fonction</strong></li>
 						</br>
-						<li><strong>FO/BO</strong></li>
+						<li><strong>FO/BO(disabled)</strong></li>
 						</br>
 						<li><strong>Modalite</strong></li>
 						</br>
