MBA- commit pour test

--- a/application/views/scripts/personne/create.phtml
+++ b/application/views/scripts/personne/create.phtml
@@ -22,13 +22,14 @@
 			    * MBA : fonction anonyme qui se déclenche à l'événement Change() pointant 
 			    sur le <select id="#id_entite_pr">
 			 */
-				$("#id_entite_pr").change(function() {
+				$("#id_entite_pr").live("change",function() {
 					
 				value = $("#id_entite_pr option:selected").val(); 
 				
 				if (value == "2")
 				 { 
-					 $('#id_modalite_pr').val('7');
+					
+					 $("#id_modalite_pr option[value='7']").attr("selected","selected");
 					 $("#id_modalite_pr").attr("disabled","true");
 				 }
 				 else
@@ -71,8 +72,16 @@
 																									
 					</ol>			
 				</div>
+				
 	
 	<?php echo $this->form; ?>	
+	
 	</div>
-
-
+	 <?php /* if(isset($this->error)) {?>
+<span class="error"> 
+     <?php  foreach ($this->error as $key => $value) 
+                 echo "</br>". $key ." : ". $value;
+	             
+     ?> 
+     </span> 
+<?php }*/ ?>
