MTA : recuperation du projet et ajout de la class Utils

--- a/application/views/scripts/test/index.phtml
+++ b/application/views/scripts/test/index.phtml
@@ -1,13 +1,7 @@
 
 <?php 
 
-///////////Function Paques_saint_ascension_pentacote($annee)///////////
-/*	echo 'les jours de paques </br>';
-	for ($i = 0; $i < 5; $i++) 
-	{
-		echo $this->var[$i].'</br>' ;
-	}
-*/
+
 
 ///////////Function recupére les jours fériés maroc///////////
 /*  echo 'les jours fériés Maroc </br>';
@@ -43,19 +37,26 @@
     echo " le jour est il férié ?  :".$this->var;  */ 
 
 
-
-///////////Function normaliser les dates debut et fin///////////
-/*	   echo 'Normaliser les dates debut et fin </br>'; 
-	
-       for ($i = 0; $i <  count($this->var); $i++) 
-       {
-       	echo  $this->var[$i].'</br>' ;   	
-       }
-*/
-
 ///////////Function calcul_nombre_jours_conges///////////
+/*e
 echo 'Calculer le nombre de jours entre deux dates ! </br>'; 
 echo $this->var;
+*/
+
+
+///////////Function a_normaliser($date,$maroc)
+/*
+    echo " le jour à normaliser :".$this->var;   
+*/
+
+///////////Function  normaliser_date_debut_conge($date,$maroc)
+//    print_r($this->var);   
+
+    
+    
+///////////Function  normaliser_date_fin_conge($date,$maroc)
+//	  print_r($this->var);   
+    
 
 ?>
 
